# SausageV2

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.bkp  CMakePresets.json  CMakeSettings.json  README.md  SausageCmakeUtilities.cmake  TODO.txt  add_submodules.py  env_vars_for_pkg_config_and_others.txt  requirements.sh  requirements.txt
engine/: CMakeLists.txt
engine/dependencies/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_internal.h  imgui_tables.cpp
engine/dlls/: move_64bit.sh
engine/lib/assimp/: assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
engine/lib/bullet/: Bullet2FileLoaderd.lib  Bullet3Collisiond.lib  Bullet3Commond.lib  Bullet3Dynamicsd.lib  Bullet3Geometryd.lib  BulletFileLoaderd.lib  BulletInverseDynamicsUtilsd.lib  BulletInverseDynamicsd.lib  BulletWorldImporterd.lib  BulletXmlWorldImporterd.lib  BussIKd.lib  ConvexDecompositiond.lib  GIMPACTUtilsd.lib  LinearMathd.lib  OpenGLWindowd.lib  clsocketd.lib
engine/lib/glad/: CMakeLists.txt  README.txt
engine/lib/glad/src/: glad.c
engine/lib/harfbuzz/lib/: harfbuzz-subset.lib  harfbuzz.lib
engine/lib/libRocket/: RocketControls.lib
engine/scripts/: generate_shaders.py
engine/src/: Constants.h  FileWatcher.cpp  FileWatcher.h  Logging.cpp  Logging.h  OpenGLHelpers.cpp  OpenGLHelpers.h  SausageMain.h  Scene.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  Structures.h  TestShapes.h  Texture.cpp  Texture.h  buffer.h  physics.h  sausage.h  systems.h
engine/src/buffer/: Arena.cpp  Arena.h  BufferManager.cpp  BufferManager.h  BufferSettings.h  BufferStorage.cpp  BufferStorage.h  BulletDebugDrawerBufferConsumer.h  FontBufferConsumer.h  GLBuffers.cpp  GLBuffers.h  GLBuffersCommon.h  GLCommandBuffers.h  GLVertexAttributes.h  GPUSynchronizer.h  InstancesSlots.h  MeshDataBufferConsumer.h  MeshDataUtils.h
engine/src/buffer/consumers/: BufferConsumer.cpp  BufferConsumer.h  BulletDebugDrawerBufferConsumer.cpp  BulletDebugDrawerBufferConsumer.h  FontBufferConsumer.cpp  FontBufferConsumer.h  FontBufferConsumerUI.cpp  FontBufferConsumerUI.h  MeshDataBufferConsumer.cpp  MeshDataBufferConsumer.h  MeshDataBufferConsumerShared.cpp  MeshDataBufferConsumerShared.h  MeshDataOutlineBufferConsumer.h  MeshStaticBufferConsumer.h  MeshTerrainBufferConsumer.h  OverlayBufferConsumer3D.cpp  OverlayBufferConsumer3D.h  TerrainBufferConsumer.h  UIBufferConsumer.cpp  UIBufferConsumer.h
engine/src/gui(ROCKETLIBNOTUSED)/: ShellFileInterface.h
engine/src/shaders/: 3d_font_fs.glsl  3d_font_vs.glsl  3d_overlay_fs.glsl  3d_overlay_vs.glsl  blinn_phong_fs.glsl  blinn_phong_vs.glsl  debug_fs.glsl  simple_font_fs.glsl  simple_font_vs.glsl  static_fs.glsl  static_vs.glsl  stencil_fs.glsl  stencil_vs.glsl  terrain_fs.glsl  terrain_vs.glsl  terrais_fs.glsl  terrais_vs.glsl  ui_back_fs.glsl  ui_back_vs.glsl  ui_font_fs.glsl  ui_font_vs.glsl
engine/src/shaders/shared/: _README.md  __init__.py  _constants.py  _controller.py  _light.py  _mesh.py  _static.py  _terrain.py  _texture.py  _ui.py
engine/src/structures/: AnimationStruct.h  BoundingVolume.h  DrawCall.h  DrawCallStruct.h  Frustum.cpp  Frustum.h  GLUniformsStruct.h  GPUStructs.h  GPUUniformsStruct.h  InstanceSlot.h  Interfaces.h  LightStruct.h  MeshDataInstance.cpp  MeshDataInstance.h  MeshDataOutline.h  MeshDataOverlay3D.h  MeshDataStruct.cpp  MeshDataStruct.h  MeshDataTerrain.cpp  MeshDataTerrain.h  MeshDataTypes.h  MeshDataUI.cpp  MeshDataUI.h  OverlayStruct.h  PhysicsStruct.h  ShaderStruct.h  Spatial.h  Structures.h  TerrainStruct.h  TextureStruct.h  Vertex.h
engine/src/structures/docs/: Std140_Std430_GL_alignment.md  TODO_REVISIT_STRUCTURE_ALIGNMENT_SORT_TOPMOST
engine/src/structures/spatial/: BoundingVolume.h  Octree.h  Spatial.h  SpatialManager.h  Transform.h
engine/src/systems/: Animation.cpp  Animation.h  AsyncTaskManager.cpp  AsyncTaskManager.h  Camera.cpp  Camera.h  DrawCallManager.cpp  DrawCallManager.h  FontManager.h  GameLoop.h  Gui.h  MeshManager.cpp  MeshManager.h  Renderer.cpp  Renderer.h  RendererContextManager.cpp  RendererContextManager.h  SceneManager.h  ShaderManager.cpp  ShaderManager.h  StateManager.h  SystemsManager.cpp  SystemsManager.h  TextureManager.cpp  TextureManager.h
engine/src/systems/controller/: Controller.h  ControllerUtils.h  MouseKeyboardEventProcessor.cpp  MouseKeyboardEventProcessor.h
engine/src/systems/gtk/: GtkManager.h
engine/src/systems/gui/: ImguiGui.h  ScreenOverlay.h  ScreenOverlayManager.cpp  ScreenOverlayManager.h
engine/src/systems/physics/: BulletDebugDrawer.cpp  BulletDebugDrawer.h  Physics.h
engine/src/systems/spatial/: SpatialManager.h
engine/src/systems/world_gen/: Terrain.h  TerrainManager.cpp  TerrainManager.h  TerrainTile.h  WorldState.h
engine/src/utils/: AnimHelpers.cpp  AnimHelpers.h  AssetUtils.h  AssimpHelper.h  ColladaLoader.h  GLHelpers.cpp  GLHelpers.h  GLMHelpers.cpp  GLMHelpers.h  Macros.h  NumberPool.cpp  NumberPool.h  OpenGLHelpers.cpp  OpenGLHelpers.h  RenderUtils.h  ThreadSafeNumberPool.cpp  ThreadSafeNumberPool.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadSafeSet.cpp  ThreadSafeSet.h  ThreadSafeVector.h
engine/test/: CMakeLists.txt
game1/: CMakeLists.txt
game1/assets/gui/: Arial_0.tga  cursor.rml  demo.rml  invader.rcss  present.tga  window.rml
game1/assets/models/: BLENDER_EXPORT_SETTINGS.txt  Frog.fbx  Frog2.fbx  cubes.blend  cubes.blend1  frog.mtl  test2.blend
game1/assets/textures/: skin1.ptex
game1/src/: Scene.h  Scene1.h  game.cpp  game.h
game1/src/ai/: AiCommon.h  CommonwealthBehaviour.h  StoryTeller.h  WorldEventListener.h
test/: CMakeLists.txt  Main.cpp  Test1.h
test/assets/: test.ui  testGL.glade  testGL.ui  testGL_gtk4.glade  testresources
test/assets/models/: Cube.001.fbx
test/systems/: 3DFontManagerTest.h  FontManagerTest.h  GTKExampleApps.h  GtkGLOverlayTest.h  RendererContextManagerTest.h  SausageTestBase.h  ScreenOverlayManagerTest.h  ScreenOverlayTest.h  UIFontManagerTest.h
test/systems/world_gen/: TerrainTest.h
test/utils/: AssetUtilsTest.h  ColladaLoaderTest.cpp  GLHelpersTest.h  GLMHelpersTest.h  Test1.cpp
(+119 files in other folders)
